:mag: (refactor) suppression buylinks and parteners, add semantic <footer>

--- a/page2.html
+++ b/page2.html
@@ -122,7 +122,7 @@
 
 
 	<!-- Footer - bloc-8 -->
-	<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+	<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 		<div class="container bloc-sm">
 			<div class="row">
 				<div class="col-sm-12">
@@ -150,11 +150,12 @@
 								<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 							</div>
 						</div>
+						<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+	</footer>
 	<!-- Footer - bloc-8 END -->
 
 	</div>
