:mag: (refactor) suppression of all fontawesome files and glyphicons css, change by fontawesome CDN

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
 		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
 		<script src="./js/jquery-2.1.0.js"></script>
@@ -15,6 +14,7 @@
 		<script src="./js/blocs.js"></script>
 		<script src="./js/jquery.touchSwipe.js" defer></script>
 		<script src="./js/gmaps.js"></script>
+		<script src="https://kit.fontawesome.com/022660c1b2.js" crossorigin="anonymous"></script>
 	
 		<title>La chouette agence, web design à Lyon</title>
 		<meta name="description" content="La Chouette Agence, agence de Web Design à Lyon, vous accompagne tout au long de votre projet ! Conseils, créations...">
