--- a/page2.html
+++ b/page2.html
@@ -7,7 +7,6 @@
 
 		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 
 		<script src="./js/jquery-2.1.0.min.js"></script>
@@ -15,6 +14,7 @@
 		<script src="./js/blocs.min.js"></script>
 		<script src="./js/jqBootstrapValidation.js"></script>
 		<script src="./js/formHandler.js"></script>
+		<script src="https://kit.fontawesome.com/022660c1b2.js" crossorigin="anonymous"></script>
 
 		<title>La chouette agence, web design à Lyon</title>
 		<meta name="description" content="La Chouette Agence, agence de Web Design à Lyon, vous accompagne tout au long de votre projet ! Conseils, créations...">
