--- a/page2.html
+++ b/page2.html
@@ -5,15 +5,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 		<link rel="icon" type="image/ico" href="./assets/favicon/favicon.ico">
 
-		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
-
-		<script src="./js/jquery-2.1.0.min.js"></script>
-		<script src="./js/bootstrap.min.js"></script>
-		<script src="./js/blocs.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+		
+		<script src="./js/jquery-2.1.0.js"></script>
+		<script src="./js/bootstrap.js"></script>
+		<script src="./js/blocs.js"></script>
+		<script src="./js/jquery.touchSwipe.js" defer></script>
+		<script src="./js/gmaps.js"></script>
 		<script src="./js/jqBootstrapValidation.js"></script>
 		<script src="./js/formHandler.js"></script>
+
 		<script src="https://kit.fontawesome.com/022660c1b2.js" crossorigin="anonymous"></script>
 
 		<title>La chouette agence, web design à Lyon</title>
@@ -28,25 +31,28 @@
 		<main class="page-container">
 			
 			<!-- bloc-0 -->
-			<section class="bloc bgc-white l-bloc " id="bloc-0">
-				<article class="container bloc-sm">
-					<nav class="navbar row">
-						<div class="navbar-header">
-							<a class="navbar-brand" href="index.html"><img src="./assets/logo/la-chouette-agence.png" alt="La Chouette Agence, Agence Web Design à Lyon" height="50" /></a>
-						</div>
-						<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-							<ul class="site-navigation nav navbar-nav">
-								<li>
-									<a href="index.html">Accueil</a>
-								</li>
-								<li>
-									<a href="page2.html">page2 &gt;</a>
-								</li>
-							</ul>
-						</div>
-					</nav>
-				</article>
-			</section>
+			<header class="bloc bgc-white l-bloc " id="bloc-0">
+				<nav class="container bloc-sm navbar row">
+					<div class="navbar-header">
+						<a class="navbar-brand" href="index.html">
+							<img src="./assets/logo/la-chouette-agence.png" alt="La chouette agence, web design à Lyon" height="50" />
+						</a>
+						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+							<span class="sr-only icon-bar fas fa-bars fa-2x">dede</span>
+						</button>
+					</div>
+					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+						<ul class="site-navigation nav navbar-nav">
+							<li>
+								<a href="index.html">Accueil</a>
+							</li>
+							<li>
+								<a href="page2.html">Contact</a>
+							</li>
+						</ul>
+					</div>
+				</nav>
+			</header>
 			<!-- bloc-0 END -->
 
 			<!-- bloc-6 -->
