--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 		<script src="https://kit.fontawesome.com/022660c1b2.js" crossorigin="anonymous"></script>
 
 		<title>La chouette agence, web design à Lyon</title>
-		<meta name="description" content="La Chouette Agence, agence de Web Design à Lyon, vous accompagne tout au long de votre projet ! Conseils, créations...">
+		<meta name="description" content="La chouette agence, agence de Web Design à Lyon, vous accompagne tout au long de votre projet ! Conseils, créations...">
 
 		<!-- Analytics -->
 		<!-- Analytics END -->
@@ -47,7 +47,7 @@
 								<a href="index.html">Accueil</a>
 							</li>
 							<li>
-								<a href="page2.html">Contact</a>
+								<a href="contact.html">Contact</a>
 							</li>
 						</ul>
 					</div>
@@ -57,7 +57,7 @@
 
 			<!-- bloc-6 -->
 			<section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
-				<div class="container bloc-lg">
+				<article class="container bloc-lg">
 					<div class="row">
 						<div class="col-sm-12">
 							<h1 class="text-center hero-bloc-text tc-white">
@@ -69,43 +69,40 @@
 							</p>
 						</div>
 					</div>
-				</div>
+				</article>
 			</section>
 			<!-- bloc-6 END -->
 
 			<!-- bloc-7 -->
 			<section class="bloc bgc-white l-bloc" id="bloc-7">
-				<div class="container bloc-lg">
+				<article class="container bloc-lg">
 					<div class="row">
 						<div class="col-sm-6">
-							<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+
+
+							<form action="./includes/form_1.php" method="post" id="form_1" novalidate success-msg="Votre message a bien été envoyé" fail-msg="Oups, il semblerait que notre serveur de mail ne répond pas. Désolé pour l'inconvénient.">
+								<!-- !!! demander à Jean-François si c'est ok !!! -->
 								<div class="form-group">
-									<label>
-										Nom
-									</label>
-									<input id="name" class="form-control" required />
+									<label for="name">Nom</label>
+									<input type="text" id="name" name="user_name" class="form-control" placeholder="Indiquez votre nom/prénom ou celui de votre entreprise">
+								</div>
+								<div>
+									<label for="email">Adresse email</label>
+									<input type="email" id="email" name="user_mail" class="form-control" placeholder="Indiquez votre mail de contact" required>
 								</div>
 								<div class="form-group">
-									<label>
-										Adresse email
-									</label>
-									<input id="email" class="form-control" type="email" required />
+									<label for="input_504">Comment nous avez-vous connus ?</label>
+									<textarea id="input_504" name="knowing" class="form-control" type="text" placeholder="Ex : Google, bouche à oreille, etc."></textarea>
 								</div>
 								<div class="form-group">
-									<label>
-										Comment nous avez-vous connu ?
-									</label>
-									<input class="form-control" type="email" required id="input_504" />
+									<label for="message">Brief de votre projet (ajoutez autant de détails que nécessaire)</label>
+									<textarea name="project" id="message" cols="59" rows="4" placeholder="Indiquez votre projet" required></textarea>
 								</div>
-								<div class="form-group">
-									<label>
-										Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-									</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
-								</div> 
 								<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 									Envoyer
 								</button>
 							</form>
+
 						</div>
 						<div class="col-sm-6">
 							<p>
@@ -113,12 +110,13 @@
 							</p>
 						</div>
 					</div>
-				</div>
+				</article>
 			</section>
 			<!-- bloc-7 END -->
 
 			<!-- ScrollToTop Button -->
-			<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+			<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')">Text<span class="fa fa-chevron-up">Text</span></a>
+			<!-- Attention, le ScrollToTop n'est pas visible sur la page ! Il faudrait modifier sa couleur pour qu'elle se détache du background. -->
 			<!-- ScrollToTop Button END-->
 
 
