--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<script src="https://kit.fontawesome.com/022660c1b2.js" crossorigin="anonymous"></script>
 	
 		<title>La chouette agence, web design à Lyon</title>
-		<meta name="description" content="La Chouette Agence, agence de Web Design à Lyon, vous accompagne tout au long de votre projet ! Conseils, créations...">
+		<meta name="description" content="La chouette agence, agence de Web Design à Lyon, vous accompagne tout au long de votre projet ! Conseils, créations...">
 
 		<!-- Analytics -->
 		<!-- Analytics END -->
@@ -34,7 +34,7 @@
 							<img src="./assets/logo/la-chouette-agence.png" alt="La chouette agence, web design à Lyon" height="50" />
 						</a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-							<span class="sr-only icon-bar fas fa-bars fa-2x">dede</span>
+							<span class="sr-only icon-bar fas fa-bars fa-2x"></span>
 						</button>
 					</div>
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
@@ -43,7 +43,7 @@
 								<a href="index.html">Accueil</a>
 							</li>
 							<li>
-								<a href="page2.html">Contact</a>
+								<a href="contact.html">Contact & Devis</a>
 							</li>
 						</ul>
 					</div>
@@ -53,31 +53,31 @@
 
 			<!-- bloc-1-presentation -->
 			<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
-				<div class="container bloc-lg">
+				<article class="container bloc-lg">
 					<div class="row tight-width-whitespace">
 						<div class="col-sm-12">
 							<img src="./assets/logo/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, agence web paris, création logo paris" />
-							<h1 class="text-center hero-bloc-text tc-white ">
-								La chouette agence.
+							<h1 class="text-center hero-bloc-text tc-white">
+								La chouette agence
 							</h1>
 							<div class="text-center">
-								<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+								<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 							</div>
 						</div>
 					</div>
-				</div>
+				</article>
 			</section>
 			<!-- bloc-1-presentation END -->
 
 			<!-- bloc-2-services -->
 			<section class="bloc bgc-white l-bloc" id="bloc-2-services">
 				<div class="container bloc-md">
-					<div class="row">
+					<article class="row">
 						<div class="col-sm-12 text-center">
-							<p>La Chouette Agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</p>
+							<p>La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</p>
 						</div>
-					</div>
-					<div class="row voffset-lg med-width-whitespace">
+					</article>
+					<article class="row voffset-lg med-width-whitespace">
 						<div class="col-sm-4">
 							<div class="text-center">
 								<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
@@ -85,8 +85,8 @@
 							<h3 class="mg-md text-center">
 								Web design
 							</h3>
-							<p class="text-center ">
-								Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+							<p class="text-center">
+								Que vous ayez un site web qui a besoin d'un rafraîchipagsement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 							</p>
 						</div>
 						<div class="col-sm-4">
@@ -111,44 +111,46 @@
 								Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
 							</p>
 						</div>
-					</div>
-					<div class="row voffset-lg voffset">
-						<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-							<p>La Chouette Agence est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon.
-							Maxime Guibard, PDG de À vos fourchettes</p>
-
-						</div>
-					</div>
+					</article>
+					<article class="row voffset-lg voffset">
+						<figure>
+							<blockquote cite="#" class="citation">
+								<p class="citation__text">« La chouette agence est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon. »</p>
+							</blockquote>
+							<figcaption class="citation__auteur">— Maxime Guibard, <cite>PDG de À vos fourchettes</cite></figcaption>
+						</figure>
+					</article>
 				</div>
 			</section>
 			<!-- bloc-2-services END -->
 
 			<!-- bloc-3-what-i-do -->
 			<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
-				<div class="container bloc-lg">
+				<article class="container bloc-lg">
 					<div class="row tight-width-whitespace black-background">
 						<div class="col-sm-12">
 							<h2 class="mg-md text-center tc-white">
-								Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
+								Nous souhaitons aider les entreprises de la région lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.<br>
 							</h2>
 							<p class="text-center white">
-								Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
+								Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locales, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beaux et bien structurés, qui seront facilement trouvables sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
 							</p>
 						</div>
 					</div>
-				</div>
+				</article>
 			</section>
 			<!-- bloc-3-what-i-do END -->
 
 			<!-- bloc-4-portfolio -->
 			<section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 				<div class="container bloc-lg">
-					<div class="row">
+					<article class="row">
 						<div class="col-sm-12 text-center">
 							<p>Nous travaillons avec beaucoup de clients, voici nos réalisations</p>
 						</div>
-					</div>
-					<div class="row tight-width-whitespace portfolio-row">
+					</article>
+
+					<article class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
 							<a href="#" data-lightbox="./assets/portfolio/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="./assets/portfolio/1.jpg" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
 							<h3 class="mg-md text-center">
@@ -167,8 +169,9 @@
 								Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
 							</p>
 						</div>
-					</div>
-					<div class="row tight-width-whitespace portfolio-row">
+					</article>
+
+					<article class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
 							<a href="#" data-lightbox="./assets/portfolio/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="./assets/portfolio/3.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
 							<h3 class="mg-md text-center">
@@ -187,14 +190,14 @@
 								Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
 							</p>
 						</div>
-					</div>
+					</article>
 				</div>
 			</section>
 			<!-- bloc-4-portfolio END -->
 
 			<!-- bloc-5-cta -->
 			<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
-				<div class="container bloc-lg">
+				<article class="container bloc-lg">
 					<div class="row">
 						<h2 class="mg-md text-center tc-white">
 							Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
@@ -203,7 +206,7 @@
 							<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 						</div>
 					</div>
-				</div>
+				</article>
 			</section>
 			<!-- bloc-5-cta END -->
 
@@ -245,7 +248,5 @@
 
 		</main>
 		<!-- Principal conteneur END -->
-		
-
-</body>
+	</body>
 </html>
