--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-		
+
 		<script src="./js/jquery-2.1.0.js"></script>
 		<script src="./js/bootstrap.js"></script>
 		<script src="./js/blocs.js"></script>
@@ -19,7 +19,7 @@
 
 		<script src="https://kit.fontawesome.com/022660c1b2.js" crossorigin="anonymous"></script>
 
-		<title>La chouette agence, web design à Lyon</title>
+		<title>La chouette agence, Lyon : Contact & Devis</title>
 		<meta name="description" content="La chouette agence, agence de Web Design à Lyon, vous accompagne tout au long de votre projet ! Conseils, créations...">
 
 		<!-- Analytics -->
@@ -29,7 +29,7 @@
 	<body>
 		<!-- Principal conteneur -->
 		<main class="page-container">
-			
+
 			<!-- bloc-0 -->
 			<header class="bloc bgc-white l-bloc " id="bloc-0">
 				<nav class="container bloc-sm navbar row">
@@ -37,18 +37,16 @@
 						<a class="navbar-brand" href="index.html">
 							<img src="./assets/logo/la-chouette-agence.png" alt="La chouette agence, web design à Lyon" height="50" />
 						</a>
+
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-							<span class="sr-only icon-bar fas fa-bars fa-2x">dede</span>
+							<span class="sr-only icon-bar fas fa-bars fa-2x"></span>
 						</button>
 					</div>
+
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
-							<li>
-								<a href="index.html">Accueil</a>
-							</li>
-							<li>
-								<a href="contact.html">Contact</a>
-							</li>
+							<li><a href="index.html">Accueil</a></li>
+							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</div>
 				</nav>
@@ -63,6 +61,7 @@
 							<h1 class="text-center hero-bloc-text tc-white">
 								Parlons web design !
 							</h1>
+
 							<p class="text-center mg-lg tc-white tight-width-whitespace">
 								Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
 								Parlez-nous de votre projet en complétant le formulaire ci-dessous.
@@ -78,35 +77,41 @@
 				<article class="container bloc-lg">
 					<div class="row">
 						<div class="col-sm-6">
-
-
 							<form action="./includes/form_1.php" method="post" id="form_1" novalidate success-msg="Votre message a bien été envoyé" fail-msg="Oups, il semblerait que notre serveur de mail ne répond pas. Désolé pour l'inconvénient.">
 								<!-- !!! demander à Jean-François si c'est ok !!! -->
 								<div class="form-group">
 									<label for="name">Nom</label>
 									<input type="text" id="name" name="user_name" class="form-control" placeholder="Indiquez votre nom/prénom ou celui de votre entreprise">
 								</div>
+
 								<div>
 									<label for="email">Adresse email</label>
 									<input type="email" id="email" name="user_mail" class="form-control" placeholder="Indiquez votre mail de contact" required>
 								</div>
+
 								<div class="form-group">
 									<label for="input_504">Comment nous avez-vous connus ?</label>
 									<textarea id="input_504" name="knowing" class="form-control" type="text" placeholder="Ex : Google, bouche à oreille, etc."></textarea>
 								</div>
+
 								<div class="form-group">
 									<label for="message">Brief de votre projet (ajoutez autant de détails que nécessaire)</label>
 									<textarea name="project" id="message" cols="59" rows="4" placeholder="Indiquez votre projet" required></textarea>
 								</div>
+
 								<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 									Envoyer
 								</button>
 							</form>
-
 						</div>
+
 						<div class="col-sm-6">
 							<p>
-								contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
+								contact@lachouetteagence.com
+								<br>
+								2 place Sathonay 69001 Lyon
+								<br>
+								Ouvert de 9h à 18h, du lundi au vendredi
 							</p>
 						</div>
 					</div>
@@ -119,49 +124,44 @@
 			<!-- Attention, le ScrollToTop n'est pas visible sur la page ! Il faudrait modifier sa couleur pour qu'elle se détache du background. -->
 			<!-- ScrollToTop Button END-->
 
-
 			<!-- Footer - bloc-8 -->
 			<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 				<div class="container bloc-sm">
 					<div class="row">
 						<div class="col-sm-12">
-							<p class="text-center white">
-								La chouette agence - Agence web basée à Lyon.<br>
-							</p>
+							<p class="text-center white">La chouette agence - Agence web basée à Lyon</p>
+
 							<div class="row row-no-gutters social">
 								<div class="col-sm-3">
 									<div class="text-center">
 										<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
 									</div>
 								</div>
+
 								<div class="col-sm-3">
 									<div class="text-center">
 										<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
 									</div>
 								</div>
+
 								<div class="col-sm-3">
 									<div class="text-center">
 										<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
 									</div>
 								</div>
+
 								<div class="col-sm-3">
 									<div class="text-center">
 										<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 									</div>
-								</div>
+								</div>								
 							</div>
 						</div>
 					</div>
 				</div>
 			</footer>
 			<!-- Footer - bloc-8 END -->
-
 		</main>
 		<!-- Principal conteneur END -->
-		
-
 	</body>
-
-
-
 </html>
