--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<nav class="container bloc-sm navbar row">
 					<div class="navbar-header">
 						<a class="navbar-brand" href="index.html">
-							<img src="./assets/logo/la-chouette-agence.png" alt="La chouette agence, web design à Lyon" height="50" />
+							<img src="./assets/logo/la-chouette-agence.png" alt="logo de La chouette agence, agence Web Design à Lyon, création logo et sites web" height="50" />
 						</a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only icon-bar fas fa-bars fa-2x"></span>
@@ -56,7 +56,7 @@
 				<article class="container bloc-lg">
 					<div class="row tight-width-whitespace">
 						<div class="col-sm-12">
-							<img src="./assets/logo/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, agence web paris, création logo paris" />
+							<img src="./assets/logo/logo.png" class="center-block image-resize-mode" width="100" alt="logo de La chouette agence, agence Web Design à Lyon, création logo et sites web" />
 							<h1 class="text-center hero-bloc-text tc-white">
 								La chouette agence
 							</h1>
