--- a/index.html
+++ b/index.html
@@ -215,9 +215,14 @@
 				<div class="container bloc-sm">
 					<div class="row">
 						<div class="col-sm-12">
-							<p class="text-center white">
-								La chouette agence - Agence web basée à Lyon.<br>
-							</p>
+							<address>
+								<p class="text-center white">
+									La chouette agence - Agence web basée à Lyon <br>
+									2 place Sathonay, 69001 Lyon <br>
+									Ouvert de 9h à 18h, du lundi au vendredi
+								</p>
+							</address>
+
 							<div class="row row-no-gutters social">
 								<div class="col-sm-3">
 									<div class="text-center">
