:mag: (refactor) section/article/presentation : change display

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
 		<script src="./js/jquery-2.1.0.js"></script>
-		<!-- <script src="./js/bootstrap.js"></script> -->
+		<script src="./js/bootstrap.js"></script>
 		<script src="./js/blocs.js"></script>
 		<script src="./js/jquery.touchSwipe.js" defer></script>
 		<script src="./js/gmaps.js"></script>
@@ -83,18 +83,18 @@
 									<input type="text" id="name" name="user_name" class="form-control" placeholder="Indiquez votre nom/prénom ou celui de votre entreprise" required>
 								</div>
 
-								<div>
+								<div class="form-group">
 									<label for="email">Adresse email</label>
 									<input id="email" type="email" name="user_mail" class="form-control" placeholder="Indiquez votre mail de contact" required>
 								</div>
 
 								<div class="form-group">
-									<label for="input_504">Comment nous avez-vous connus ?</label>
+									<label for="input_504">Comment nous avez-vous connus ?</label><br>
 									<textarea id="input_504" name="knowing" class="form-control" type="text" placeholder="Ex : Google, bouche à oreille, etc." required></textarea>
 								</div>
 
 								<div class="form-group">
-									<label for="message">Brief de votre projet (ajoutez autant de détails que nécessaire)</label>
+									<label for="message">Brief de votre projet (ajoutez autant de détails que nécessaire)</label><br>
 									<textarea name="project" id="message" cols="59" rows="4" class="form-control" placeholder="Indiquez votre projet" required></textarea>
 								</div>
 								
