--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
 		<script src="./js/jquery-2.1.0.js"></script>
-		<!-- <script src="./js/bootstrap.js"></script> -->
+		<script src="./js/bootstrap.js"></script>
 		<script src="./js/blocs.js"></script>
 		<script src="./js/jquery.touchSwipe.js" defer></script>
 		<script src="./js/gmaps.js"></script>
@@ -53,7 +53,7 @@
 			<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 				<article class="container bloc-lg">
 					<div class="row tight-width-whitespace">
-						<div class="col-sm-12">
+						<div class="col-sm-12 presentation">
 							<img src="./assets/logo/logo.png" class="center-block image-resize-mode" width="100" alt="logo de La chouette agence, agence Web Design à Lyon, création logo et sites web" />
 							<h1 class="text-center hero-bloc-text tc-white">
 								La chouette agence
