:pencil2: (refactor) : rewrite css

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
 
 		<!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap.css"> -->
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="media-style.css">
 		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
 		<script src="./js/jquery-2.1.0.js"></script>
@@ -109,12 +110,11 @@
 
 			<!-- ScrollToTop Button -->
 			<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
-			<!-- Attention, le ScrollToTop n'est pas visible sur la page ! Il faudrait modifier sa couleur pour qu'elle se détache du background. -->
 			<!-- ScrollToTop Button END-->
 
 			<!-- Footer - bloc-8 -->
 			<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-				<div class="container bloc-sm">
+				<div class="bloc-sm">
 					<div class="row">
 						<div class="col-sm-12">
 							<address>
@@ -124,31 +124,28 @@
 									Ouvert de 9h à 18h, du lundi au vendredi
 								</p>
 							</address>
-							
+
 							<div class="row row-no-gutters social">
 								<div class="col-sm-3">
 									<div class="text-center">
 										<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
 									</div>
 								</div>
-
 								<div class="col-sm-3">
 									<div class="text-center">
 										<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
 									</div>
 								</div>
-
 								<div class="col-sm-3">
 									<div class="text-center">
 										<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
 									</div>
 								</div>
-
 								<div class="col-sm-3">
 									<div class="text-center">
 										<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 									</div>
-								</div>								
+								</div>
 							</div>
 						</div>
 					</div>
