:bug: (bug) fix double id cat-hero

--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
 									<textarea name="project" id="message" cols="59" rows="4" class="form-control" placeholder="Indiquez votre projet" required></textarea>
 								</div>
 								
-								<button type="submit" class="text-center btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine formulaire-button" id="cta-hero">Envoyer</a>
+								<button type="submit" class="text-center btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine formulaire-button">Envoyer</a>
 								</button>
 							</form>
 						</div>
