:bug: correct css error

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 						<div class="row tight-width-whitespace portfolio-row">
 							<div class="col-sm-6 portfolio-row-box">
 								<a href="#">
-									<img src="./assets/portfolio/1.jpg" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" />
+									<img src="./assets/portfolio/1.jpg" alt="La chouette agance, Web design à Lyon,, site pour un journal local" class="img-responsive portfolio-thumb" />
 								</a>
 								<h2 class="mg-md text-center">
 									Refonte d'un site web pour un journal local
@@ -173,7 +173,7 @@
 							</div>
 							<div class="col-sm-6 portfolio-row-box">
 								<a href="#">
-									<img src="./assets/portfolio/2.jpg" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" />
+									<img src="./assets/portfolio/2.jpg" class="img-responsive portfolio-thumb" alt="La chouette agance, Web design à Lyon, site pour photographes" />
 								</a>
 								<h2 class="mg-md text-center">
 									Création d'un site web pour photographes
@@ -187,7 +187,7 @@
 						<div class="row tight-width-whitespace portfolio-row">
 							<div class="col-sm-6 portfolio-row-box">
 								<a href="#" data-lightbox="./assets/portfolio/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
-									<img src="./assets/portfolio/3.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"/>
+									<img src="./assets/portfolio/3.bmp" class="img-responsive portfolio-thumb" alt="La chouette agance, Web design à Lyon,, site pour voyageurs"/>
 								</a>
 								<h2 class="mg-md text-center">
 									Création d'un site internet pour un voyageur
@@ -198,7 +198,7 @@
 							</div>
 							<div class="col-sm-6 portfolio-row-box">
 								<a href="./contact.html" data-lightbox="./assets/portfolio/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
-									<img src="./assets/portfolio/4.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" />
+									<img src="./assets/portfolio/4.bmp" class="img-responsive portfolio-thumb" alt="La chouette agance, Web design à Lyon, site pour agence de mariage" />
 								</a>
 								<h2 class="mg-md text-center">
 									Conception d'un site pour une agence de mariage
@@ -241,9 +241,10 @@
 						<div class="col-sm-12">
 							<address>
 								<p class="text-center white">
-									La chouette agence - Agence web basée à Lyon <br>
-									2 place Sathonay, 69001 Lyon <br>
-									Ouvert de 9h à 18h, du lundi au vendredi
+									La chouette agence<br>
+									Agence web basée à Lyon<br>
+									2 place Sathonay, 69001 Lyon<br>
+									Ouverte de 9h à 18h, du lundi au vendredi
 								</p>
 							</address>
 
