:pencil2: (refactor) comments and refactor

--- a/index.html
+++ b/index.html
@@ -9,26 +9,6 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
-		<!-- fichiers non-minifiés
-		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-
-		<script src="./js/jquery-2.1.0.js"></script>
-		<script src="./js/bootstrap.js"></script>
-		<script src="./js/blocs.js"></script>
-		<script src="./js/jquery.touchSwipe.js" defer></script>
-		<script src="./js/gmaps.js"></script>
-		-->
-
-		<!-- fichiers minifiés
-		<link rel="stylesheet" type="text/css" href="./css/bootstrap-min.css">
-		
-		<script src="./js/jquery-2.1.0-min.js"></script>
-		<script src="./js/bootstrap-min.js"></script>
-		<script src="./js/blocs-min.js"></script>
-		<script src="./js/jquery.touchSwipe-min.js" defer></script>
-		<script src="./js/gmaps-min.js"></script>
-		-->
-
 		<script src="https://kit.fontawesome.com/022660c1b2.js" crossorigin="anonymous"></script>
 	
 		<title>La chouette agence, web design à Lyon</title>
@@ -38,7 +18,7 @@
 		<!-- Analytics END -->
 	</head>
 
-	<body class="bgc-atomic-tangerine">
+	<body class="bgc-atomic-tangerine"> <!-- Applique un fond orange sur le site. Utile lorsque l'utilisateur dézoom et évite d'avoir une cassure entre le footer et le fond du site web. -->
 		<header class="header bgc-white" id="top-page">
 			<div class="header__navigation container">
 				<div class="header__wrap">
@@ -50,10 +30,8 @@
 				</div>
 				
 				<nav class="header__nav">
-					<ul class="header__navbar">
-						<li><a href="index.html">Accueil</a></li>
-						<li><a href="contact.html">Contact & Devis</a></li>
-					</ul>
+					<a href="index.html">Accueil</a>
+					<a href="contact.html">Contact & Devis</a>
 				</nav>
 			</div>
 		</header>
