--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr">
+<html lang="fr"> <!-- la valeur "default" n'existe pas, remplacée par "fr" -->
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -8,26 +8,6 @@
 		<!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap.css"> -->
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-
-		<!-- fichiers non-minifiés
-		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-
-		<script src="./js/jquery-2.1.0.js"></script>
-		<script src="./js/bootstrap.js"></script>
-		<script src="./js/blocs.js"></script>
-		<script src="./js/jquery.touchSwipe.js" defer></script>
-		<script src="./js/gmaps.js"></script>
-		-->
-
-		<!-- fichiers minifiés
-		<link rel="stylesheet" type="text/css" href="./css/bootstrap-min.css">
-		
-		<script src="./js/jquery-2.1.0-min.js"></script>
-		<script src="./js/bootstrap-min.js"></script>
-		<script src="./js/blocs-min.js"></script>
-		<script src="./js/jquery.touchSwipe-min.js" defer></script>
-		<script src="./js/gmaps-min.js"></script>
-		-->
 
 		<script src="https://kit.fontawesome.com/022660c1b2.js" crossorigin="anonymous"></script>
 	
@@ -38,23 +18,21 @@
 		<!-- Analytics END -->
 	</head>
 
-	<body>
+	<body class="bgc-atomic-tangerine"> <!-- Applique un fond orange sur le site. Utile lorsque l'utilisateur dézoom et évite d'avoir une cassure entre le footer et le fond du site web. -->
 		<!-- bloc-0 AKA header -->	
 		<header class="header bgc-white" id="top-page">
 			<div class="header__navigation container">
 				<div class="header__wrap">
 					<a class="header__picture" href="index.html">
-						<img src="./assets/logo/la-chouette-agence.png" alt="La chouette agence, web design à Lyon" height="50" />
+						<img src="./assets/logo/la-chouette-agence.png" alt="La chouette agence, web design à Lyon" height="40" />
 					</a>
 	
 					<span class="fa fa-bars menu__icon"></span>
 				</div>
 				
 				<nav class="header__nav">
-					<ul class="header__navbar">
-						<li><a href="index.html">Accueil</a></li>
-						<li><a href="contact.html">Contact & Devis</a></li>
-					</ul>
+					<a href="index.html">Accueil</a>
+					<a href="contact.html">Contact & Devis</a>
 				</nav>
 			</div>
 		</header>
