:bug: (fix) heading solve synthax

--- a/contact.html
+++ b/contact.html
@@ -22,17 +22,19 @@
 		<!-- bloc-0 AKA header -->	
 		<header class="header bgc-white" id="top-page">
 			<div class="header__navigation container">
-				<div class="header__wrap">
-					<a class="header__picture" href="index.html">
-						<img src="./assets/min/logo/la-chouette-agence-min.png" alt="La chouette agence, web design à Lyon" height="40" />
-					</a>
-	
-					<span class="fa fa-bars menu__icon"></span>
-				</div>
-				
+				<a class="header__picture" href="index.html">
+					<h1>
+						<img
+							src="./assets/min/logo/la-chouette-agence-min.png"
+							alt="La chouette agence, web design à Lyon"
+							height="40"
+						/>
+					</h1>
+				</a>
+
 				<nav class="header__nav">
-					<a href="index.html">Accueil</a>
-					<a href="contact.html">Contact & Devis</a>
+					<a href="index.html" aria-label="Accueil">Accueil</a>
+					<a href="contact.html" aria-label="Contact">Contact & Devis</a>
 				</nav>
 			</div>
 		</header>
@@ -45,9 +47,9 @@
 				<article class="container bloc-lg">
 					<div class="row">
 						<div class="col-sm-12">
-							<h1 class="text-center hero-bloc-text tc-white contact">
+							<h2 class="text-center hero-bloc-text tc-white contact">
 								Parlons web design !
-							</h1>
+							</h2>
 
 							<p class="text-center mg-lg tc-white tight-width-whitespace contact">
 								Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
